# talent_finder

./: .env.example  .gitignore  LICENSE.md  README.md  borderless_data.csv  borderless_ranked.md  config.yaml  gayan_ranked.md  gh_data.csv  lava_data.csv  pyproject.toml  seed_loader.py  test_users.csv
.github/workflows/: deploy-leaderboard.yml
gh_scraper/: __init__.py  __main__.py  cli.py  config.py  discovery.py  models.py  output.py  scoring.py  scraper.py
gh_scraper/api/: __init__.py  client.py  graphql.py  rate_limiter.py  rest.py
leaderboard/: next.config.js  package-lock.json  package.json
leaderboard/scripts/: process-csv.ts
leaderboard/src/app/: globals.css  layout.tsx  page.tsx
leaderboard/src/components/: CelebrationModal.tsx  Leaderboard.tsx  LeaderboardTable.tsx  LeaderboardTabs.tsx  Pagination.tsx  SearchBar.tsx  ShareModal.tsx
leaderboard/src/data/: all.json  borderless.json  github.json
leaderboard/src/types/: index.ts
